/**
 * @file BaseImplementControlSystem.hpp
 * @author David Gitz (davidgitz@gmail.com)
 * @brief
 * @version 0.1
 *
 * @copyright Copyright (c) 2026
 *
 */
#pragma once
#include <IImplementControlSystem.hpp>

namespace fast::rf::ImplementControlSystem {
/**
 * @brief Base Class for the ImplementControl System
 *
 */
class BaseImplementControlSystem : public IImplementControlSystem {
   public:
};
}  // namespace fast::rf::ImplementControlSystem