/**
 * @file DummyImplementControlSystem.hpp
 * @author David Gitz (davidgitz@gmail.com)
 * @brief
 * @version 0.1
 *
 * @copyright Copyright (c) 2026
 *
 */
#pragma once

#include <BaseImplementControlSystem.hpp>

namespace fast::rf::ImplementControlSystem {
/**
 * @brief Dummy ImplementControl System
 *
 */
class DummyImplementControlSystem : public BaseImplementControlSystem {
   public:
};
}  // namespace fast::rf::ImplementControlSystem