/**
 * @file IImplementControlSystem.hpp
 * @author David Gitz (davidgitz@gmail.com)
 * @brief
 * @version 0.1
 *
 * @copyright Copyright (c) 2026
 *
 */
#pragma once

namespace fast::rf::ImplementControlSystem {
/**
 * @brief Interface for the ImplementControl System
 *
 */
class IImplementControlSystem {
   public:
    IImplementControlSystem() = default;
    virtual ~IImplementControlSystem() = default;
};
}  // namespace fast::rf::ImplementControlSystem