@startuml
title System-ImplementControl Package Diagram

namespace fast::rf {
  namespace messages  {}
  package ImplementControlSystem  #LightYellow;line:blue {
    interface IImplementControlSystem {
    }
    abstract BaseImplementControlSystem {
    }
    IImplementControlSystem <|-- BaseImplementControlSystem
    class BasicImplementControlSystem {

    }
    BaseImplementControlSystem <|-- BasicImplementControlSystem
    class DummyImplementControlSystem  {
    }
    BaseImplementControlSystem <|-- DummyImplementControlSystem
  }
}
@enduml